--- a/encyclopedia/templates/encyclopedia/article.html
+++ b/encyclopedia/templates/encyclopedia/article.html
@@ -5,13 +5,17 @@
 {% endblock %}
 
 {% block body %}
-    <div class="textcon">
-       {{articleContent|safe}} 
-    </div>
-    
-    <form action="{% url 'encyclopedia:editarticle' %}" method="post">
-        {% csrf_token %}
-        <input class="btn btn-primary" type="submit" value="Edit Article"> 
-        <input type="hidden" name="title" value="{{title}}">
-    </form>
+    {% if articleContent == None %}
+        <h3>This article does not exist</h3>
+    {% else %}
+        <div class="textcon">
+           {{articleContent|safe}} 
+        </div>
+        
+        <form action="{% url 'encyclopedia:editarticle' %}" method="post">
+            {% csrf_token %}
+            <input class="btn btn-primary" type="submit" value="Edit Article"> 
+            <input type="hidden" name="title" value="{{title}}">
+        </form>
+    {% endif %}
 {% endblock %}
